--- a/views/partials/comment.handlebars
+++ b/views/partials/comment.handlebars
@@ -1,3 +1,4 @@
-<div>
-    <h3>This is a comment.</h3>
+<div style="background-color: grey">
+    <h3>{{This is a comment.}}</h3>
+    <p>Written by: </p>
 </div>
