--- a/views/partials/post.handlebars
+++ b/views/partials/post.handlebars
@@ -1,6 +1,6 @@
 {{#each posts as |post|}}
-    <div>
-        <h2>{{blogContent}}</h2>
-        <p>Written by: {{user.username}}</p>
-    </div>
+<div>
+    <h2>{{blogContent}}</h2>
+    <p>Written by: {{post_creator.username}}</p>
+</div>
 {{/each}}
