--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,11 +1,13 @@
-<form>
+<form class="form login-form">
     <div class="mb-3">
-        <label for="exampleInputEmail1" class="form-label">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+        <label for="input-email" class="form-label">Email address</label>
+        <input type="email" class="form-control" id="input-email" aria-describedby="emailHelp">
     </div>
     <div class="mb-3">
-        <label for="exampleInputPassword1" class="form-label">Password</label>
-        <input type="password" class="form-control" id="exampleInputPassword1">
+        <label for="input-password" class="form-label">Password</label>
+        <input type="password" class="form-control" id="input-password">
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+
+<script src="/js/login.js"></script>
