add temporary main handlebars template to support login and logout functions

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,10 @@
     </header>
     <nav>
         <a href="/">Home</a>
+        {{#unless logged_in}}
         <a href="/login">Login</a>
+        <a href="/signup">Signup</a>
+        {{/unless}}
         {{#if logged_in}}
         <a href="/dashboard/{{userId}}">Dashboard</a>
         {{> logout}}
