--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,21 +1,23 @@
 <body class="text-center">
 
 <main class="form-signin">
-<form>
+<form class="signup-form">
   <h1 class="h3 mb-3 fw-normal">Create a new user</h1>
   <div class="form-floating">
-    <input type="username" class="form-control" id="floatingInput" placeholder="User1234">
+    <input type="username" class="form-control input-username" id="floatingInput" placeholder="User1234">
     <label for="floatingInput">User name</label>
   </div>
   <div class="form-floating">
-    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+    <input type="email" class="form-control input-email" id="floatingInput" placeholder="name@example.com">
     <label for="floatingInput">Email address</label>
   </div>
   <div class="form-floating">
-    <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+    <input type="password" class="form-control input-password" id="floatingPassword" placeholder="Password">
     <label for="floatingPassword">Password</label>
   </div>
   <button class="w-100 btn btn-lg btn-primary" type="submit">Sign up now</button>
   <p class="mt-5 mb-3 text-muted">Already a user? <a href="./signin">Click here to sign in</a></p>
 </form>
 </main>
+
+<script src="../js/signup.js"></script>
