--- a/views/partials/postbtn.handlebars
+++ b/views/partials/postbtn.handlebars
@@ -1,3 +1,4 @@
 <body class="text-center">
-        <button class="btn btn-lg btn-primary">New Post +</button>
+        <h5 class="card-title new-blog-title" contenteditable="true">New Post Text Here.</h5>
+        <button class="btn btn-lg btn-primary new-post" data-userid="{{usersPosts.id}}">New Post +</button>
 </div>
