--- a/views/partials/post-admin.handlebars
+++ b/views/partials/post-admin.handlebars
@@ -1,10 +1,12 @@
-<div id="dashboard-main">
+{{#each usersPosts.post_creator}}
+<div class="postid-{{id}}" id="dashboard-main">
   <h1 class="h2 mb-3 fw-normal">Your Blog Posts:</h1>
   <div class="card" style="width: 50rem;">
-  <div class="card-body">
-    <h5 class="card-title">Post title</h5>
-    <h6 class="card-subtitle mb-2 text-muted">Created by You on 1/1/2021</h6>
+  <div class="card-body" data-postid={{id}}>
+    <h5 class="card-title blog-title" contenteditable="true">{{blogContent}}</h5>
+    <h6 class="card-subtitle mb-2 text-muted">Created by You on {{createdAt}}</h6>
     <p class="card-text">This a blog post was created by you.</p>
-    <a href="#" class="card-link">Update</a>
-    <a href="#" class="card-link">Delete</a>
+    <button type="button" class="card-link update-post" data-postid="{{id}}">Update</button>
+    <button type="button" class="card-link delete-post" data-postid="{{id}}">Delete</button>
   </div>
+{{/each}}
