--- a/views/partials/post-user.handlebars
+++ b/views/partials/post-user.handlebars
@@ -4,6 +4,6 @@
     <h5 class="card-title">Post title</h5>
     <h6 class="card-subtitle mb-2 text-muted">Created by {{ username.id }} on 1/1/2021</h6>
     <p class="card-text">This a blog post was created by another user.</p>
-    <a href="#" class="card-link">Add a Comment</a>
+    <a href="#" class="card-link new-comment">Add a Comment</a>
   </div>
 </div>
