add crud functions to comments, initial logic to showing elements based on current userId

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,9 +7,9 @@
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.82.0">
         <!-- Bootstrap core CSS -->
-    <link href="./css/bootstrap.min.css" type="text/css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" type="text/css" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="./css/sticky-footer-navbar.css" type="text/css" rel="stylesheet">
+    <link href="../css/sticky-footer-navbar.css" type="text/css" rel="stylesheet">
     <title>Dev Tech Blog</title>
   </head>
   <body class="d-flex flex-column h-100">
