--- a/views/partials/post-user.handlebars
+++ b/views/partials/post-user.handlebars
@@ -1,9 +1,11 @@
+{{#each posts}}
 <body class="text-center">
   <div class="card" style="width: 50rem;">
   <div class="card-body">
-    <h5 class="card-title">Post title</h5>
-    <h6 class="card-subtitle mb-2 text-muted">Created by {{ username.id }} on 1/1/2021</h6>
+    <h5 class="card-title">{{blogContent}}</h5>
+    <a href="/post/{{id}}"><h6 class="card-subtitle mb-2 text-muted">Created by {{post_creator.username}} on {{createdAt}}</h6></a>
     <p class="card-text">This a blog post was created by another user.</p>
     <a href="#" class="card-link new-comment">Add a Comment</a>
   </div>
 </div>
+{{/each}}
