update equality checks

--- a/views/partials/comment-user.handlebars
+++ b/views/partials/comment-user.handlebars
@@ -12,7 +12,7 @@
     2)  Then, we grab the userId from the comment, and the user_id property in the parent (we need to use the ../ to reference the parent).
     3)  Then as per the comparison, generate the respective block.
     --}}
-    {{#eq userId ../user_id}}
+    {{#eq userId ../userId}}
       <p>These are equal</p>
       {{else}}
       <p>These are not equal</p>
