--- a/views/partials/comment-user.handlebars
+++ b/views/partials/comment-user.handlebars
@@ -3,7 +3,7 @@
   <div class="card" style="width: 50rem;">
   <div class="card-body">
     <h6 class="card-subtitle mb-2 text-muted">{{comment_creator.username}} on {{createdAt}}</h6>
-    <p class="card-text">{{commentContent}}</p>
+    <p class="card-text input-content-{{id}}" contenteditable="true">{{commentContent}}</p>
 
     {{!-- Add button here and custom helper to render update and delete if the userId matches the session userId --}}
     {{!-- 
@@ -14,6 +14,7 @@
     --}}
     {{#eq userId ../userId}}
       <p>These are equal</p>
+      {{> comment-done }}
       {{else}}
       <p>These are not equal</p>
     {{/eq}}
