update handlebars templates

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -51,8 +51,7 @@
 <!-- Begin page content -->
   {{{body}}}
     {{#if logged_in}}
-    <script src="./js/logout.js"></script>
-    <script src="./js/comment-admin.js"></script>
+    <script src="../js/logout.js"></script>
     {{/if}}
     <script src="../js/bootstrap.bundle.min.js"></script>
   </body>
