--- a/views/partials/post-user.handlebars
+++ b/views/partials/post-user.handlebars
@@ -2,10 +2,10 @@
 <body class="text-center">
   <div class="card" style="width: 50rem;">
   <div class="card-body">
-    <h5 class="card-title">{{blogContent}}</h5>
-    <a href="/post/{{id}}"><h6 class="card-subtitle mb-2 text-muted">Created by {{post_creator.username}} on {{createdAt}}</h6></a>
-    <p class="card-text">This a blog post was created by another user.</p>
-    <a href="#" class="card-link new-comment">Add a Comment</a>
+    <a href="/post/{{id}}">
+      <h5 class="card-title">{{blogContent}}</h5>
+    </a>
+    <h6 class="card-subtitle mb-2 text-muted">Created by {{post_creator.username}} on {{createdAt}}</h6>
   </div>
 </div>
 {{/each}}
