--- a/views/partials/singlepost.handlebars
+++ b/views/partials/singlepost.handlebars
@@ -2,13 +2,17 @@
   <div class="card" style="width: 50rem;">
   <div class="card-body">
     <h5 class="card-title">{{postData.blogContent}}</h5>
-    <a href="/post/{{id}}"><h6 class="card-subtitle mb-2 text-muted">Created by {{postData.post_creator.username}} on {{postData.createdAt}}</h6></a>
-    <p class="card-text">This a blog post was created by another user.</p>
-    <textarea class="input-comment"></textarea>
-    <button type="button" class="card-link new-comment" data-postid="{{postData.id}}">Add a Comment</button>
+    <h6 class="card-subtitle mb-2 text-muted">Created by {{postData.post_creator.username}} on {{postData.createdAt}}</h6>
   </div>
 </div>
 
 {{> comment-user}}
+
+<div class="form-floating">
+  <textarea class="input-comment form-control new-blog-title" placeholder="new comment text" id="floatingTextarea2" style="height:10vh"></textarea>
+  <label for="floatingTextarea2">New comment text...</label>
+</div>
+
+<button type="button" class="btn-primary new-comment" data-postid="{{postData.id}}">Add a Comment</button>
 
 <script src="../js/comment-admin.js"></script>
