--- a/views/partials/singlepost.handlebars
+++ b/views/partials/singlepost.handlebars
@@ -2,12 +2,13 @@
   <div class="card" style="width: 50rem;">
   <div class="card-body">
     <h5 class="card-title">{{postData.blogContent}}</h5>
-    <h6 class="card-subtitle mb-2 text-muted">Created by {{postData.post_creator.username}} on {{postData.createdAt}}</h6>
+    <h6 class="card-subtitle mb-2 text-muted">Created by {{postData.post_creator.username}} on {{formatTime postData.createdAt}}</h6>
   </div>
 </div>
 
 {{> comment-user}}
 
+{{#if logged_in}}
 <div class="form-floating">
   <textarea class="input-comment form-control new-blog-title" placeholder="new comment text" id="floatingTextarea2" style="height:10vh"></textarea>
   <label for="floatingTextarea2">New comment text...</label>
@@ -16,3 +17,4 @@
 <button type="button" class="btn-primary new-comment" data-postid="{{postData.id}}">Add a Comment</button>
 
 <script src="../js/comment-admin.js"></script>
+{{/if}}
