--- a/views/partials/comment-done.handlebars
+++ b/views/partials/comment-done.handlebars
@@ -3,7 +3,7 @@
     <button href="#" class="card-link">Add Comment</button>
     {{/if}}
     {{#unless logged_in}}
-    <button type="button" class="card-link update-comment" data-userid="{{userId}}" data-commentid="{{id}}">Update</button>
-    <button type="button" class="card-link delete-comment" data-userid="{{userId}}" data-commentid="{{id}}">Delete</button>
+    <button type="button" class="btn-secondary update-comment" data-userid="{{userId}}" data-commentid="{{id}}">Update</button>
+    <button type="button" class="btn-secondary delete-comment" data-userid="{{userId}}" data-commentid="{{id}}">Delete</button>
     {{/unless}}
  </div>
