--- a/views/partials/comment-user.handlebars
+++ b/views/partials/comment-user.handlebars
@@ -2,7 +2,7 @@
 <div data-userid="{{userId}}" id="comment">
   <div class="card" style="width: 50rem;">
   <div class="card-body">
-    <h6 class="card-subtitle mb-2 text-muted">{{comment_creator.username}} on {{createdAt}}</h6>
+    <h6 class="card-subtitle mb-2 text-muted">{{comment_creator.username}} on {{formatTime createdAt}}</h6>
     <p class="card-text input-content-{{userId}}" contenteditable="true">{{commentContent}}</p>
 
     {{!-- Add button here and custom helper to render update and delete if the userId matches the session userId --}}
