update handlebars templates, fix authentication issue not redirecting after successful account creation

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,4 +1,4 @@
-<div style="padding-top: 10vh">
+<div class="my-3">
     <h1>This is the Dashboard for {{usersPosts.username}}.</h1>
     {{> post-admin}}
     {{> postbtn }}
