--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,4 +1,4 @@
-<div style="padding-top: 10vh;">
-    <h1>This is the Homepage.</h1>
+<div class="my-3">
+    <h1>Blog Feed</h1>
     {{> post-user}}
 </div>
