--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -49,7 +49,9 @@
 </header>
 
 <!-- Begin page content -->
+<div class="d-flex my-5 p-2 justify-content-center">
   {{{body}}}
+</div>
     {{#if logged_in}}
     <script src="../js/logout.js"></script>
     {{/if}}
