--- a/views/partials/post-user.handlebars
+++ b/views/partials/post-user.handlebars
@@ -1,5 +1,5 @@
 {{#each posts}}
-<body class="text-center">
+<div class="text-center my-3">
   <div class="card" style="width: 50rem;">
   <div class="card-body">
     <a href="/post/{{id}}">
@@ -7,5 +7,6 @@
     </a>
     <h6 class="card-subtitle mb-2 text-muted">Created by {{post_creator.username}} on {{createdAt}}</h6>
   </div>
+</div>
 </div>
 {{/each}}
