--- a/views/partials/postbtn.handlebars
+++ b/views/partials/postbtn.handlebars
@@ -1,5 +1,5 @@
-<div class="form-floating">
+<div class="my-3 form-floating">
         <textarea class="form-control new-blog-title" placeholder="new post text" id="floatingTextarea" style="height:10vh"></textarea>
         <label for="floatingTextarea">New post text...</label>
 </div>
-<button class="btn btn-lg btn-primary new-post" data-userid="{{usersPosts.id}}">New Post +</button>
+<button class="btn btn-lg btn-primary new-post" data-userid="{{usersPosts.id}}">Add New Post</button>
