--- a/views/partials/singlepost.handlebars
+++ b/views/partials/singlepost.handlebars
@@ -6,10 +6,11 @@
   </div>
 </div>
 
+<h5>Comments</h5>
 {{> comment-user}}
 
 {{#if logged_in}}
-<div class="form-floating">
+<div class=" my-3 form-floating">
   <textarea class="input-comment form-control new-blog-title" placeholder="new comment text" id="floatingTextarea2" style="height:10vh"></textarea>
   <label for="floatingTextarea2">New comment text...</label>
 </div>
