--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,8 +1,8 @@
-<body class="text-center">
+<div class="my-3 text-center">
 
-<main class="form-signin">
+<div class="form-signin">
 <form class="signup-form">
-  <h1 class="h3 mb-3 fw-normal">Create a new user</h1>
+  <h1 class="h3 mb-3 fw-normal">Create a New Account</h1>
   <div class="form-floating">
     <input type="username" class="form-control input-username" id="floatingInput" placeholder="User1234">
     <label for="floatingInput">User name</label>
@@ -15,9 +15,10 @@
     <input type="password" class="form-control input-password" id="floatingPassword" placeholder="Password">
     <label for="floatingPassword">Password</label>
   </div>
-  <button class="w-100 btn btn-lg btn-primary" type="submit">Sign up now</button>
+  <button class="w-100 my-3 btn btn-lg btn-primary" type="submit">Sign up now</button>
   <p class="mt-5 mb-3 text-muted">Already a user? <a href="./signin">Click here to sign in</a></p>
 </form>
-</main>
+</div>
+</div>
 
 <script src="../js/signup.js"></script>
