--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -1,6 +1,6 @@
-<body class="text-center">
+<div class="my-3 text-center">
 
-<main class="form-signin">
+<div class="form-signin">
 <form class="login-form">
   <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
@@ -12,9 +12,9 @@
     <input type="password" class="form-control input-password" id="floatingPassword" placeholder="Password">
     <label for="floatingPassword">Password</label>
   </div>
-  <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+  <button class="w-100 my-3 btn btn-lg btn-primary" type="submit">Sign in</button>
   <p class="mt-5 mb-3 text-muted">Not a user? <a href="./signup">Sign up instead</a></p>
 </form>
-</main>
+</div>
 
 <script src="./js/login.js"></script>
