--- a/views/partials/comment-buttons.handlebars
+++ b/views/partials/comment-buttons.handlebars
@@ -1,4 +1,6 @@
 <div id="comment-buttons">
     <button type="button" class="btn-secondary update-comment" data-userid="{{userId}}" data-commentid="{{id}}">Update</button>
     <button type="button" class="btn-secondary delete-comment" data-userid="{{userId}}" data-commentid="{{id}}">Delete</button>
- </div>
+    <br>
+    <p class="my-1" style="font-size: 10px;">Tip: Click on the comment text to edit, then click update.</p>
+</div>
