--- a/views/partials/post-admin.handlebars
+++ b/views/partials/post-admin.handlebars
@@ -7,6 +7,7 @@
     <h6 class="card-subtitle mb-2 text-muted">Created on {{formatTime createdAt}}</h6>
     <button type="button" class="btn-primary update-post" data-postid="{{id}}">Update</button>
     <button type="button" class="btn-primary delete-post" data-postid="{{id}}">Delete</button>
+    <p class="my-1" style="font-size: 10px;">Tip: Click on the comment text to edit, then click update.</p>
   </div>
   </div>
 {{/each}}
